Fix Login input alignment

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,4 +1,3 @@
-
 .login {
     width: 100%;
     background: #fff;
@@ -7,15 +6,24 @@
     padding: 50px;
     text-align: center;
 }
+
+.login label {
+    display: inline-block;
+    width: 70px;
+    text-align: right;
+    margin: 0 10px;
+}
+
 .login input {
     width: 50%;
     padding: 12px 20px;
     margin: 15px auto;
-    display: block;
+    display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
+
 .login h1 {
     font-size: 33px;
     margin: 20px auto 50px auto;
